Fix collapse key box position

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/splitbox/SplitBox.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/splitbox/SplitBox.less
@@ -100,7 +100,7 @@
   margin-left: 4px;
 
   &.left {
-    margin-top: -6px;
+    margin-top: 6px;
     margin-left: 4px;
   }
 
